App revert
