# api/swagger.yaml
@@ -11,6 +11,24 @@ schemes:
 produces:
 - "application/json"
 paths:
+  /categories/all:
+    get:
+      tags:
+      - "categories"
+      summary: "Get A list of categories"
+      description: "The Category endpoint returns a list of available parcel categories.\n"
+      parameters: []
+      responses:
+        200:
+          description: "An array of Category objects"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Category"
+        default:
+          description: "No Categories Found."
+          schema:
+            $ref: "#/definitions/Error"
   /users/login:
     post:
       tags:
@@ -165,6 +183,54 @@ definitions:
       expiryDate:
         type: "integer"
         description: "Timestamp for the expiry date of the token."
+  Parcel:
+    type: "object"
+    properties:
+      parcelId:
+        type: "integer"
+        description: "The parcel id."
+      dateCreated:
+        type: "string"
+        description: "The date the parcel was created"
+      Name:
+        type: "string"
+        description: "The name of the parcel"
+      passes:
+        type: "integer"
+        description: "The number of times the parcel has been passed."
+      opened:
+        type: "boolean"
+        description: "The status of the parcel, whether it has been opened or not."
+      dateOpened:
+        type: "string"
+        description: "The Date the parcel was opened."
+  ParcelContent:
+    type: "object"
+    properties:
+      contentId:
+        type: "integer"
+        description: "The id of the parcel content item."
+      expiryDate:
+        type: "string"
+        description: "The expiry date of the parcel content item."
+      name:
+        type: "string"
+        description: "The name of the parcel content item."
+      content:
+        type: "string"
+        description: "The actual content of the parcel item."
+      categoryId:
+        type: "string"
+        description: "The category that the item falls into."
+  Category:
+    type: "object"
+    properties:
+      categoryId:
+        type: "integer"
+        description: "The ID of the category"
+      name:
+        type: "string"
+        description: "The category name"
   Error:
     type: "object"
     properties:
